reworked code examples for java streams - Part II